--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.13.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
